
- New method: 
  time_zone()
  time_zone( category => 'Africa' );

0.03     2004-03-17
0.02_02  2004-03-15
- update to new DateTime::Set specs
- more tests, revised README and TODO
- added a note on README about tests that may fail.
- use a slightly different density formula 
  for calculating the first element of a set.
  This should give a better distribution for 
  $set->next($dt) on an unbounded, uncached set -
  but only the first time it is called (this is 
  still in the TODO list)

0.02_01  2004-01-08
- POD fixes

0.02     2004-01-08
- simplify (and fix) new_cached() algorithm
- revised docs

0.01_05  2004-01-07
- datetime() accepts time_zone and locale parameters
- new accepts a duration parameter

0.01_04  2004-01-07
- random generator is overridable
- no more overflow in "set" routines for very small densities
- more tests

0.01_03  2004-01-06
- random_duration has 'duration' parameters
- more examples

0.01_02  2004-01-06
- random_duration, random_datetime
- more examples

0.01_01  2004-01-05
- more docs
- added new_cached()

0.01     2004-01-05
- created from DT::Event::Recurrence
